--- a/OMI/Web.config
+++ b/OMI/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información acerca de cómo configurar una aplicación ASP.NET, consulte
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,9 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-OMI-20170606044731.mdf;Initial Catalog=aspnet-OMI-20170606044731;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+     <add name="ConexionOP" connectionString="Data Source=localhost\MSSQL16;Integrated Security=SSPI;Initial Catalog=DBOPSGI" providerName="System.Data.SqlClient" />
+  <add name="OPEntities" connectionString="metadata=res://*/ModelOP.csdl|res://*/ModelOP.ssdl|res://*/ModelOP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\MSSQL16;initial catalog=DBOPSGI;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
