--- a/OMI/packages.config
+++ b/OMI/packages.config
@@ -4,7 +4,8 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.es" version="6.1.3" targetFramework="net452" />
-  <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="jQuery" version="3.1.1" targetFramework="net452" />
+  <package id="jquery.event.drag" version="2.2.0" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core.es" version="2.2.1" targetFramework="net452" />
