--- a/OMI/Web.config
+++ b/OMI/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-     <add name="ConexionOP" connectionString="Data Source=localhost\MSSQL16;Integrated Security=SSPI;Initial Catalog=DBOPSGI" providerName="System.Data.SqlClient" />
-  <add name="OPEntities" connectionString="metadata=res://*/ModelOP.csdl|res://*/ModelOP.ssdl|res://*/ModelOP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\MSSQL16;initial catalog=DBOPSGI;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+     <add name="ConexionOP" connectionString="Data Source=localhost\MSSQL16;Integrated Security=SSPI;Initial Catalog=DBOPSGI;user id=sa;password=onepro;" providerName="System.Data.SqlClient" />
+  <add name="OPEntities" connectionString="metadata=res://*/ModelOP.csdl|res://*/ModelOP.ssdl|res://*/ModelOP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\MSSQL16;initial catalog=DBOPSGI;user id=sa;password=onepro;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
