--- a/OMI/OMI.csproj
+++ b/OMI/OMI.csproj
@@ -342,6 +342,7 @@
     <Content Include="Views\Unidad\Edit.cshtml" />
     <Content Include="Views\Unidad\Index.cshtml" />
     <Content Include="Views\Solicitud\Index.cshtml" />
+    <Content Include="Views\Solicitud\NuevaSolicitud.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
