--- a/OMI/Views/Web.config
+++ b/OMI/Views/Web.config
@@ -17,7 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="OMI" />
+        <add namespace="Omu.AwesomeMvc"/>
+        <add namespace="OMI"/>
+        <add namespace="OMI.Utils"/>
+        <add namespace="OMI.Helpers.Awesome"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
