--- a/OMI/packages.config
+++ b/OMI/packages.config
@@ -4,6 +4,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.es" version="6.1.3" targetFramework="net452" />
+  <package id="iTextSharp" version="5.5.11" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jquery.event.drag" version="2.2.0" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
@@ -43,7 +44,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="NPOI" version="2.3.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
