--- a/OMI/OMI.csproj
+++ b/OMI/OMI.csproj
@@ -220,9 +220,6 @@
     <Compile Include="Controllers\SolicitudController.cs" />
     <Compile Include="Controllers\UnidadController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
-    <Compile Include="CustomersV1.cs">
-      <DependentUpon>ModelOP.tt</DependentUpon>
-    </Compile>
     <Compile Include="C__MigrationHistory.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
@@ -266,10 +263,10 @@
     <Compile Include="PedidoMXSolicitud_Result.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
-    <Compile Include="PedidosXSolicitud_Result.cs">
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sp_AllPedido_Result.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sp_helpdiagramdefinition_Result.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
@@ -317,12 +314,6 @@
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
     <Compile Include="TbUsuario.cs">
-      <DependentUpon>ModelOP.tt</DependentUpon>
-    </Compile>
-    <Compile Include="UsuariosOMI.cs">
-      <DependentUpon>ModelOP.tt</DependentUpon>
-    </Compile>
-    <Compile Include="VUsuarioxArea.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -3620,6 +3611,7 @@
     <Content Include="Content\assets\plugins\summernote\src\sass\summernote.scss" />
     <Content Include="Content\assets\plugins\sweetalert\dev\sweetalert.scss" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
+    <Content Include="Scripts\Insertar.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
