--- a/OMI/OMI.csproj
+++ b/OMI/OMI.csproj
@@ -273,8 +273,14 @@
     <Compile Include="PedidoMXSolicitud_Result.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
+    <Compile Include="PedidosXSolicitud_Result.cs">
+      <DependentUpon>ModelOP.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sp_AllPedido_Result.cs">
+      <DependentUpon>ModelOP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sp_AllPedido_Result1.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
     <Compile Include="sp_helpdiagramdefinition_Result.cs">
@@ -3964,6 +3970,7 @@
     <Content Include="Views\Usuario\Index.cshtml" />
     <Content Include="Views\Usuario\Register.cshtml" />
     <Content Include="Views\Solicitud\Lista.cshtml" />
+    <Content Include="Views\Solicitud\Concentrado.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
