--- a/OMI/OMI.csproj
+++ b/OMI/OMI.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\OportunidadController.cs" />
     <Compile Include="Controllers\PersonalController.cs" />
     <Compile Include="Controllers\SolicitudController.cs" />
     <Compile Include="Controllers\UnidadController.cs" />
@@ -258,6 +259,7 @@
       <DependentUpon>ModelOP.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\cOportunidad.cs" />
     <Compile Include="Models\CrudHelpers.cs" />
     <Compile Include="Models\cSolicitud.cs" />
     <Compile Include="Models\cUsuario.cs" />
@@ -301,6 +303,9 @@
     <Compile Include="TbArea.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
+    <Compile Include="TbAreaInteres.cs">
+      <DependentUpon>ModelOP.tt</DependentUpon>
+    </Compile>
     <Compile Include="TbCategoria.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
@@ -311,6 +316,12 @@
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
     <Compile Include="TbFormato.cs">
+      <DependentUpon>ModelOP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TbMedioContacto.cs">
+      <DependentUpon>ModelOP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TbOportunidad.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
     <Compile Include="TbPedidoM.cs">
@@ -326,6 +337,9 @@
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
     <Compile Include="TbStatusAutorizacion.cs">
+      <DependentUpon>ModelOP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TbTipoOportunidad.cs">
       <DependentUpon>ModelOP.tt</DependentUpon>
     </Compile>
     <Compile Include="TbUnidad.cs">
@@ -3980,6 +3994,7 @@
     <Content Include="Views\Shared\_PartialPersona.cshtml" />
     <Content Include="Views\Solicitud\Autorizar.cshtml" />
     <Content Include="Views\Shared\_MenuIzquierdo.cshtml" />
+    <Content Include="Views\Oportunidad\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
